try to use local gradle since global one is too old, need 6.5, global is 5.6.4

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - gradle test
+      - ./gradlew test
 reports:
   nunit-reports:
     files:
