trying to fix test report config

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo Build started on `date`
       - ./gradlew test
 reports:
-  nunit-reports:
+  test-reports:
     files:
       - app/build/test-results/testDebugUnitTest/*.xml
-    file-format: NUNITXML
+    file-format: JUNITXML
