--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,5 @@ phases:
       - ./gradlew build
 artifacts:
   files:
-    - app/build/outputs/apk/release/app-release-unsigned.apk
+    - app/build/outputs/apk/release/*.apk
   name: app-release-unsigned.apk
-  discard-paths: yes
