--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,4 +8,4 @@ phases:
 artifacts:
   files:
     - app/build/outputs/apk/release/*.apk
-  name: app-release-unsigned.apk
+  name: app-release-unsigned-$(date +%Y-%m-%d).apk
